[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/Retro Gaming.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/Clipboard.gd" type="Script" id=2]

[sub_resource type="StreamTexture" id=3]
flags = 4
load_path = "res://.import/ClipboardBG.png-4e8f40e5bdcb6a227f0de451fa34facf.stex"

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 1 )

[node name="Clipboard" type="Button"]
margin_left = 650.0
margin_top = 570.0
margin_right = 1054.0
margin_bottom = 1170.0
grow_vertical = 2
focus_mode = 0
shortcut_in_tooltip = false
enabled_focus_mode = 0
flat = true
script = ExtResource( 2 )

[node name="NinePatchRect" type="NinePatchRect" parent="."]
margin_top = 22.0
margin_right = 404.0
margin_bottom = 576.0
texture = SubResource( 3 )
patch_margin_left = 109
patch_margin_top = 143
patch_margin_right = 88
patch_margin_bottom = 101

[node name="LevelName" type="RichTextLabel" parent="."]
margin_left = 48.0
margin_top = 134.0
margin_right = 361.0
margin_bottom = 192.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "[center]LEVEL NAME[/center]"
text = "LEVEL NAME"

[node name="Tween" type="Tween" parent="."]

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="tween_completed" from="Tween" to="." method="_on_tween_completed"]
